--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "devDependencies": {
-    "elm-watch": "^1.1.2",
-    "http-server": "^14.1.1"
-  },
   "scripts": {
-    "dev": "elm-watch hot & http-server -p 8000 -c-1"
+    "dev": "elm-watch hot"
+  },
+  "devDependencies": {
+    "elm-watch": "^2.0.0-beta.1"
   }
 }
